# OdisseyRadio

./: README.md
OdisseyRadio/: CMakeLists.txt  OdisseyRadio.pro  ReproductorMP3.cpp  ReproductorMP3.h  main.cpp  mainwindow.cpp  mainwindow.h
OdyRadio/: CustomlisView.cpp  CustomlisView.h  OdyRadio.pro  ReproductorMP3.cpp  mainwindow.cpp  mainwindow.h
build-OdisseyRadio-Desktop_Qt_6_5_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Makefile  OdisseyRadio  build.ninja  cmake_install.cmake  moc_mainwindow.cpp  moc_ventanareproductor.cpp  qtcsettings.cmake
build-OdisseyRadio-Desktop_Qt_6_5_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-b27a33bb64a2c8c3d075.json  cmakeFiles-v1-bde6b29fcc31228fc8fd.json  codemodel-v2-685d93d51f5fed5fceac.json  codemodel-v2-6cb18b244013004f4a7d.json  (+6 more)
build-OdisseyRadio-Desktop_Qt_6_5_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-ddcc8b2d338dc679f4fc.json  cmakeFiles-v1-d8ad1997e575789c6c4a.json  codemodel-v2-5aed38ae4a47a9ff95e0.json  directory-.-Debug-4df022ebc2136b5f8b1b.json  index-2023-09-12T19-43-24-0972.json  target-OdisseyRadio-Debug-fb89a135f7dfb6f81e46.json  target-OdisseyRadio_autogen-Debug-5ae71beeac954a4278e0.json
build-OdisseyRadio-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-OdisseyRadio-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-OdisseyRadio-Desktop_Qt_6_5_2_GCC_64bit-Debug/OdisseyRadio_autogen/: deps  moc_predefs.h
build-OdisseyRadio-Desktop_Qt_6_5_2_GCC_64bit-Debug/OdisseyRadio_autogen/EWIEGA46WW/: moc_mainwindow.cpp
(+439 files in other folders)
